[gd_scene load_steps=7 format=3 uid="uid://cgdr7gnp3no3c"]

[ext_resource type="Texture2D" uid="uid://dl6gb5v0og4b" path="res://Videos/button_normal.svg" id="1_r3i4h"]
[ext_resource type="Texture2D" uid="uid://cchtjhieky2tn" path="res://Videos/button_pressed.svg" id="2_q6358"]
[ext_resource type="Texture2D" uid="uid://chct2jukrq3mt" path="res://Videos/button_disabled.svg" id="3_q6358"]
[ext_resource type="BitMap" uid="uid://c657swcpwelq7" path="res://Videos/button_mask.svg" id="3_xp8id"]
[ext_resource type="Script" uid="uid://dachbv5blkqvh" path="res://Scripts/omnis_button.gd" id="4_nwkax"]
[ext_resource type="Texture2D" uid="uid://dfuv6b0dq6ueo" path="res://Videos/icon_option_off.svg" id="5_37xkv"]

[node name="OmnisButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.5
offset_top = -100.0
offset_right = 203.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(203.5, 310)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
keep_pressed_outside = true
texture_normal = ExtResource("1_r3i4h")
texture_pressed = ExtResource("2_q6358")
texture_disabled = ExtResource("3_q6358")
texture_click_mask = ExtResource("3_xp8id")
script = ExtResource("4_nwkax")
_icon_off = ExtResource("5_37xkv")
metadata/on = "on"
metadata/off = "off"

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
mouse_filter = 2
texture = ExtResource("5_37xkv")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
